<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/photo">
    <data>
        <variable
            name="viewModel"
            type="com.geeks.taskeditor.TaskViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinnerFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:entries="@array/filter_options"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_new_task2"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_new_task2" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all2" />

            <RadioButton
                android:id="@+id/radioCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed2"/>

            <RadioButton
                android:id="@+id/radioIncomplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incomplete2"/>
        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8" />

    </LinearLayout>
</layout>